2015-04-16  James Anderson  <anderson@gfz-potsdam>

	* difxio/difx_baseline.c:
	* difxio/difx_flag.c:
	* difxio/difx_freq.c:
	* difxio/difx_write_pulsar.c:
	* difxio/difx_datastream.c:
	* difxio/difx_write_input.c:
	* difxio/difx_write.h:
	* difxio/difx_config.c:
	* difxio/difx_job.c:
	* difxio/parsedifx.c:
	* difxio/difx_spacecraft.c:
	* difxio/difx_eop.c:
	* difxio/difx_antenna.c:
	* difxio/parsedifx.h:
	* difxio/difx_rule.c:
	* difxio/difx_poly_model.c:
	* difxio/difx_model.c:
	* difxio/difx_scan.c:
	* difxio/difx_source.c:
	* difxio/difx_tcal.c:
	* difxio/difx_write.c:
	* difxio/difx_write_calc.c:
	* difxio/difx_write_im.c:
	* difxio/difx_input.c:
	* difxio/difx_input.h: changes
	to incoroporate updated spacecraft handling and new delay server
	handling

2015-04-13  James Anderson  <anderson@gfz-potsdam>

	* difxio/difx_write.h:
	* difxio/difx_input.c:
	* difxio/difx_source.c:
	* difxio/difx_spacecraft.c:
	* difxio/difx_write.c:
	* difxio/difx_write_calc.c:
	* difxio/difx_scan.c:
	* difxio/difx_job.c:
	* difxio/difx_input.h: changes for new DiFX_Delay_Server RPC calls
	in calcif2 and new numerical derivatives for UVW, LMN, XYZ delay 
	deltas

3.4.1
* Changes for space VLBI correlation

3.4.0
* Fix X/Y polarization issue
* Change internal representation of networkPort from integer to string to accomodate ethernet device names
* Fix polarization detection in cases where antennas have heterogeneous polarization needs
* Add psrflag utility -- looks at fringe rates beating against pulsar period with full pulsar gate as a window function 
* Psrflag utility updated to allow user-settable threshold
* Change reference frequency, used by difx2fits, to be the bottom edge of the first AIPS IF
* Version for DiFX-2.4, Nov 04, 2014

3.3.0
* Allow ".input" portion of input file to be optional
* Version for DiFX-2.3, Dec 20, 2013

3.2.0
* Now the DifxIF structures are _always_ set to be USB.  This will break compatibility with earlier versions of difx2fits and maybe difx2mark4.